--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,6 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
 development:
-  adapter: postgresql
-  database: db/development.postgresql
+  adapter: postgresql # sqlite3
+  database: develeopment_db # db/development.sqlite3
   pool: 5
   timeout: 5000
 
@@ -13,13 +8,13 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  database: db/test.postgresql
+  adapter: postgresql # sqlite3
+  database: test_db # db/test.sqlite3
   pool: 5
   timeout: 5000
 
 production:
-  adapter: postgresql
-  database: db/production.postgresql
+  adapter: postgresql # sqlite3
+  database: production_db # db/production.sqlite3
   pool: 5
   timeout: 5000
